# fast-todo

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
api/: db.py  main.py
api/cruds/: done.py  task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
