[tool.poetry]
name = "fast-todo"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "fast_todo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
